chore(package.json): remove xo dependency
This was mostly done because of lack of familiarity with xo as a linter (again, sorry @sindresorhus)
it seemed pretty cool, but I could not figure it out, so rather than fight it for such a small repository,
I'm just removing it.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "xo && mocha"
+    "test": "mocha"
   },
   "files": [
     "index.js"
@@ -28,8 +28,7 @@
   ],
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^2.4.5",
-    "xo": "*"
+    "mocha": "^2.4.5"
   },
   "dependencies": {}
 }
