fix(publish): publish all required files
There was an issue where I did not notice that only the index file was being published

--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "test": "mocha"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "ponyfill.js",
+    "readme.md",
+    "license"
   ],
   "keywords": [
     "symbol",
