chore(package.json): update typings field
- allow import in typescript via import * as ... from
  'symbol-observable'

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "index.js",
     "ponyfill.js",
     "readme.md",
-    "license"
+    "license",
+    "index.d.ts"
   ],
   "keywords": [
     "symbol",
