chore(package): add es files and lib files to npm files

--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   "files": [
     "index.js",
     "ponyfill.js",
-    "index.d.ts"
+    "index.d.ts",
+    "es/index.js",
+    "es/ponyfill/js",
+    "lib/index.js",
+    "lib/ponyfill.js"
   ],
   "keywords": [
     "symbol",
