--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "build": "babel es --out-dir lib",
-    "test": "npm run build && mocha"
+    "test": "npm run build && mocha",
+    "prepublish": "npm test"
   },
   "files": [
     "index.js",
