--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
+    "test": "mocha && tsc ./ts-test/test.ts && node ./ts-test/test.js"
     "build": "babel es --out-dir lib",
     "test": "npm run build && mocha",
     "prepublish": "npm test"
@@ -38,6 +39,7 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "typescript": "^1.8.10"
   }
 }
