--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "mocha"
+    "build": "babel es --out-dir lib",
+    "test": "npm run build && mocha",
+    "prepublish": "npm test"
   },
   "files": [
     "index.js",
     "ponyfill.js",
-    "index.d.ts"
+    "index.d.ts",
+    "es/index.js",
+    "es/ponyfill/js",
+    "lib/index.js",
+    "lib/ponyfill.js"
   ],
   "keywords": [
     "symbol",
@@ -28,6 +34,9 @@
     "shim"
   ],
   "devDependencies": {
+    "babel-cli": "^6.9.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "mocha": "^2.4.5"
   }
