--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "npm run build && mocha && tsc ./ts-test/test.ts && node ./ts-test/test.js",
+    "test": "npm run build && mocha && tsc ./ts-test/test.ts && node ./ts-test/test.js && check-es3-syntax lib/ --kill",
     "build": "babel es --out-dir lib",
     "prepublish": "npm test"
   },
@@ -38,7 +38,9 @@
   "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es3": "^1.0.0",
     "chai": "^3.5.0",
+    "check-es3-syntax-cli": "^0.1.0",
     "mocha": "^2.4.5",
     "typescript": "^1.8.10"
   }
