Add module field for esm

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lib/index.js",
     "lib/ponyfill.js"
   ],
+  "module": "es/index.js",
   "jsnext:main": "es/index.js",
   "typings": "index.d.ts",
   "keywords": [
