--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "test": "npm run build && mocha && tsc && node ./ts-test/test.js && check-es3-syntax -p lib/ --kill",
-    "build": "babel es --out-dir lib",
+    "build": "babel es --out-dir lib && cp es/index.js.flow lib/",
     "prepublish": "npm test"
   },
   "files": [
@@ -21,8 +21,10 @@
     "ponyfill.js",
     "index.d.ts",
     "es/index.js",
+    "es/index.js.flow",
     "es/ponyfill/js",
     "lib/index.js",
+    "lib/index.js.flow",
     "lib/ponyfill.js"
   ],
   "main": "lib/index.js",
